fixed pics gap

--- a/Yuko/src/styles/index.css
+++ b/Yuko/src/styles/index.css
@@ -1302,7 +1302,7 @@ html,body {
     .second-dev-pic {
         width: 31vw;
         height: 42vw;
-        margin-left: 0vw;
+        margin-left: 1.3vw;
         z-index: 1;
         object-fit: cover;
         border-radius: 1rem;
@@ -1310,7 +1310,8 @@ html,body {
     
     .second-dev-name {
         font-size: 5vw;
-        margin-left: -20vw;
+        margin-left: -21vw;
+        background-color: #050374;
     }
     
     .second-dev-description {
@@ -1318,7 +1319,7 @@ html,body {
         font-family: 'Calibri';
         width: 45vw;
         margin-top: 0.5vw;
-        margin-left: -23vw;
+        margin-left: -26vw;
     }
 
     .third-dev {
@@ -1393,7 +1394,7 @@ html,body {
     .fourth-dev-pic {
         width: 31vw;
         height: 42vw;
-        margin-left: -2vw;
+        margin-left: 1.3vw;
         z-index: 1;
         object-fit: cover;
         border-radius: 1rem;
@@ -1409,7 +1410,7 @@ html,body {
         font-family: 'Calibri';
         width: 46vw;
         margin-top: 0.5vw;
-        margin-left: -23vw;
+        margin-left: -26vw;
     }
 
     .fifth-dev {
@@ -1485,7 +1486,7 @@ html,body {
     .sixth-dev-pic {
         width: 31vw;
         height: 42vw;
-        margin-left: -2vw;
+        margin-left: 1.3vw;
         z-index: 1;
         object-fit: cover;
         border-radius: 1rem;
@@ -1493,7 +1494,7 @@ html,body {
     
     .sixth-dev-name {
         font-size: 5vw;
-        margin-left: -14vw;
+        margin-left: -18vw;
         width: 38vw;
     }
     
@@ -1502,7 +1503,7 @@ html,body {
         font-family: 'Calibri';
         width: 46vw;
         margin-top: 0.5vw;
-        margin-left: -23vw;
+        margin-left: -26vw;
     }
 
     .landing-footer-section {
